MVP模式架构重构，首页增加下拉刷新与状态管理，新增欢迎界面与引导界面，

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="act_home_top_msg">消息</string>
     <string name="title_activity_good_details">GoodDetailsActivity</string>
     <string name="title_activity_loading_view">LoadingViewActivity</string>
+    <string name="title_activity_guide">GuideActivity</string>
+    <string name="title_activity_welcome">WelcomeActivity</string>
 </resources>
