--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="app_name">XYShop</string>
-    <string name="act_home_bottom_shouye">首页</string>
-    <string name="act_home_bottom_fenlei">分类</string>
-    <string name="act_home_bottom_gouwuche">购物车</string>
-    <string name="act_home_bottom_gerenzhongxin">个人中心</string>
+    <string name="act_home_bottom_index">首页</string>
+    <string name="act_home_bottom_category">分类</string>
+    <string name="act_home_bottom_cart">购物车</string>
+    <string name="act_home_bottom_mine">个人中心</string>
 
 
     <string name="act_home_top_scan">扫一扫</string>
