修改HomeMenu,新增Search页面

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
 
     <string name="act_home_top_scan">扫一扫</string>
     <string name="act_home_top_msg">消息</string>
+    <string name="act_search_search">搜索</string>
     <string name="title_activity_good_details">GoodDetailsActivity</string>
     <string name="title_activity_loading_view">LoadingViewActivity</string>
     <string name="title_activity_guide">GuideActivity</string>
