修改json数据格式，修改首页数据加载，新增消息列表页面

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="search_clear_history">清空历史</string>
 
 
-    <string name="new_notice">最新动态</string>
+    <string name="new_notice">最新动态:</string>
     <string name="more">更多</string>
     <string name="recom_brand">精选品牌</string>
     <string name="shop_car">购物车</string>
