新增个人纵向子页面

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="pic_ave">晒图</string>
     <string name="good_detail_config">规格参数</string>
     <string name="good_detail_service">售后服务</string>
+    <string name="press_again_exit">再按一次退出</string>
 
 
     <string name="mine_input_name">手机/会员名/邮箱</string>
